<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.InfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_person"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="USERNAME"
            android:visibility="gone"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:textSize="18sp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBankName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Expense Bank of India"
            android:textColor="@color/primary_info"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:textSize="22sp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrentBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_info"
            tools:text="@string/rupee_amount"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            android:textStyle="bold"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="15dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <!--Name Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_name"
                android:textSize="14sp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/background_edittext"
                android:hint="@string/hint_name"
                android:textSize="14sp"
                android:padding="10dp"/>
        </LinearLayout>

        <!--Bank Name Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_bank_name"
                android:textSize="14sp"/>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etBankName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/hint_write_your_desired_bank_name"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:paddingEnd="40dp" />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivInfoBankName"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/ic_info"
                    android:padding="4dp"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless" />
            </FrameLayout>
        </LinearLayout>

        <!--A/C Opening Date Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_ac_opening_date"
                android:textSize="14sp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etAccountOpeningDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/background_edittext"
                android:hint="@string/hint_when_did_you_open_your_account"
                android:textSize="14sp"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/ic_calendar"
                android:padding="10dp"/>
        </LinearLayout>

        <!--Account Number Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_account_number"
                android:textSize="14sp"/>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etAccountNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/hint_set_your_account_number"
                    android:textSize="14sp"
                    android:maxLength="11"
                    android:inputType="number"
                    android:padding="10dp"
                    android:paddingEnd="40dp" />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivInfoAccountNumber"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/ic_info"
                    android:padding="4dp"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless" />
            </FrameLayout>
        </LinearLayout>

        <!--Account Number Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_ifsc"
                android:textSize="14sp"/>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etBankCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/hint_enter_your_ifsc_swift_code"
                    android:textSize="14sp"
                    android:maxLength="11"
                    android:padding="10dp"
                    android:paddingEnd="40dp" />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivInfoBankCode"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/ic_info"
                    android:padding="4dp"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless" />
            </FrameLayout>


        </LinearLayout>

        <!--Initial Balance Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_initial_balance"
                android:textSize="14sp"/>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etCurrentBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/hint_your_current_balance"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingEnd="40dp" />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivInfoCurrentBalance"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/ic_info"
                    android:padding="4dp"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="16sp"
                android:textColor="#fff"
                android:background="@drawable/background_button" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>