<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawerLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".activity.MainActivity">

        <!--Info layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center_vertical">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/icMenu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_menu"
                android:background="@android:color/transparent"/>
            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:text="Hello, Shyam Kanth"
                android:textStyle="bold"
                android:textColor="@color/primary_info"
                android:paddingStart="10dp"
                android:textSize="18sp"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/layAccountCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_margin="5dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_person"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <!--Balance Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/tvBankBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10000.00"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:textSize="25sp"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/icInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_info"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_your_balance"
                android:textColor="@color/primary_info"
                android:textSize="12sp"/>
        </LinearLayout>

        <!--Card layout-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:cardCornerRadius="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBankName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/primary"
                    tools:text="EXPENSE BANK OF INDIA"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginEnd="20dp"
                        android:textColor="@color/primary_info"
                        android:text="@string/placeholder_ac_number"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginEnd="20dp"
                        android:textColor="@color/primary_info"
                        android:text="@string/placeholder_ac_number"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginEnd="20dp"
                        android:textColor="@color/primary_info"
                        android:text="@string/placeholder_ac_number"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvAccountNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/primary_info"
                        tools:text="* * * *"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:gravity="bottom"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="12sp"
                            android:layout_marginEnd="20dp"
                            android:textColor="@color/primary"
                            android:text="@string/text_cvv"/>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_marginEnd="20dp"
                            android:textColor="@color/primary_info"
                            android:text="@string/placeholder_cvv"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="12sp"
                            android:layout_marginEnd="20dp"
                            android:textColor="@color/primary"
                            android:text="@string/text_valid_from"/>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvValidFrom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_marginEnd="20dp"
                            android:textColor="@color/primary_info"
                            tools:text="12/23"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--Tab layout-->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/layTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp">
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_expenses"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_transaction"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_stats"/>
        </com.google.android.material.tabs.TabLayout>
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/layViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"/>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="false"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>
